<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signin"
    android:theme="@android:style/Theme.Holo.NoActionBar"
    tools:context=".activities.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="55dp"
        android:layout_height="64dp"
        android:layout_marginTop="80dp"
        android:contentDescription="logo"
        android:src="@drawable/ic_flattr"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:background="@drawable/et_bg"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        tools:layout_editor_absoluteY="180dp" />

    <EditText
        android:id="@+id/txt_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_bg"
        android:hint="Full name"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/txt_username" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/et_bg"
        android:drawableEnd="@drawable/ic_eye"
        android:drawableRight="@drawable/ic_eye"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/txt_full_name" />

    <EditText
        android:id="@+id/txt_re_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/et_bg"
        android:drawableEnd="@drawable/ic_eye"
        android:drawableRight="@drawable/ic_eye"
        android:hint="@string/re_enter_the_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <View
        android:id="@+id/line1"
        android:layout_width="50dp"
        android:backgroundTint="@color/White"
        android:layout_height="1dp"
        android:layout_marginTop="50dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/txt_re_password" />

    <CheckBox
        android:id="@+id/cb_collaborator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coloborator"
        android:textColor="@color/login_form_details"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/line1"
        app:layout_constraintEnd_toStartOf="@+id/cb_visitor"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/line1"
        app:layout_constraintTop_toTopOf="@+id/line1">

    </CheckBox>

    <CheckBox
        android:id="@+id/cb_visitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visitor"
        android:textColor="@color/login_form_details"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/line2"
        app:layout_constraintEnd_toStartOf="@+id/line2"
        app:layout_constraintStart_toEndOf="@+id/cb_collaborator"
        app:layout_constraintTop_toTopOf="@+id/cb_collaborator"></CheckBox>

    <View
        android:id="@+id/line2"
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:backgroundTint="@color/White"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toBottomOf="@+id/cb_visitor"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/cb_visitor"
        app:layout_constraintTop_toTopOf="@+id/cb_visitor" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_sign_up"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_re_password"
        tools:layout_editor_absoluteX="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>