<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".activities.LoginActivity"
android:background="@drawable/bg_login">

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_left"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="24dp"/>

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_right"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_end="24dp"
    />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="92dp"
        android:src="@drawable/logo_finally_3"
        app:civ_border_color="@color/HotPink"
        app:civ_border_width="1dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />
<!--<ImageView-->
<!--    android:id="@+id/icon"-->
<!--    android:layout_width="128dp"-->
<!--    android:layout_height="128dp"-->
<!--    android:layout_marginTop="80dp"-->
<!--    android:contentDescription="logo"-->
<!--    android:background="@drawable/bo_tron_icon"-->
<!--    android:src="@mipmap/logo"-->
<!--    app:layout_constraintEnd_toStartOf="@+id/guideline_right"-->
<!--    app:layout_constraintStart_toStartOf="@+id/guideline_left"-->
<!--    app:layout_constraintTop_toTopOf="parent" />-->
<EditText
    android:layout_marginTop="@android:dimen/app_icon_size"
    android:id="@+id/txt_username"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@drawable/et_bg"
    android:hint="@string/email_address"
    android:inputType="textEmailAddress"
    android:padding="16dp"
    android:textColorHint="@color/login_form_details"
    android:textColor="@color/login_form_details"
    app:layout_constraintEnd_toStartOf="@id/guideline_right"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:layout_constraintBottom_creator="@id/txt_password"
    tools:layout_editor_absoluteY="180dp"
    app:layout_constraintTop_toBottomOf="@+id/icon"/>

<EditText
    android:id="@+id/txt_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@drawable/et_bg"
    android:drawableEnd="@drawable/ic_eye"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:padding="16dp"
    android:textColorHint="@color/login_form_details"
    android:textColor="@color/login_form_details"
    app:layout_constraintEnd_toStartOf="@id/guideline_right"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:layout_constraintTop_toBottomOf="@+id/txt_username"
    android:drawableRight="@drawable/ic_eye" />

<Button
    android:id="@+id/btn_basic_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="48dp"
    android:background="@drawable/bg_login"
    android:text="@string/login_now"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toStartOf="@+id/guideline_right"
    app:layout_constraintStart_toStartOf="@+id/guideline_left"
    app:layout_constraintTop_toBottomOf="@id/txt_password" />

<View
    android:id="@+id/footer_line"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:backgroundTint="@color/white"
    android:layout_marginBottom="50dp"
    android:background="#fff"
    app:layout_constraintEnd_toStartOf="@id/footer_line"
    app:layout_constraintBottom_toBottomOf="parent" >

</View>

<TextView
    android:id="@+id/dont_have_account"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/dont_have_an_account"
    android:textColor="@color/login_form_details"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/footer_line"
    />


<com.google.android.gms.common.SignInButton
    android:id="@+id/btn_google_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    app:layout_constraintBottom_toTopOf="@id/footer_line"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:layout_constraintEnd_toEndOf="@id/guideline_right"
    />

<View
    android:id="@+id/line1"
    android:layout_width="120dp"
    android:layout_height="2dp"
    android:backgroundTint="@color/white"

    android:background="@color/login_form_details_medium"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:layout_constraintTop_toBottomOf="@+id/btn_basic_login"
    app:layout_constraintBottom_toTopOf="@+id/btn_google_login"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintEnd_toStartOf="@+id/or"/>

<TextView
    android:id="@+id/or"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/or"
    android:textColor="@color/login_form_details"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="@+id/line1"
    app:layout_constraintTop_toTopOf="@+id/line1"
    app:layout_constraintEnd_toStartOf="@+id/line2"
    app:layout_constraintStart_toEndOf="@+id/line1" />

<View
    android:id="@+id/line2"
    android:layout_width="120dp"
    android:layout_height="2dp"
    android:background="@color/login_form_details_medium"
    app:layout_constraintBottom_toBottomOf="@+id/or"
    app:layout_constraintEnd_toEndOf="@id/guideline_right"
    app:layout_constraintStart_toEndOf="@+id/or"
    android:backgroundTint="@color/white"
    app:layout_constraintTop_toTopOf="@+id/or" />


</androidx.constraintlayout.widget.ConstraintLayout>